# svep

./: Cargo.toml  README.md
resources/: config.toml
resources/shaders/: fragment.glsl  vertex.glsl  vulkan-fs-1.glsl  vulkan-vs-1.glsl
src/: chunks.rs  cube.rs  loader.rs  main.rs  render.rs  shader.wgsl  teapot.rs  util.rs  vkwrapper.rs
src/components/: mod.rs  player.rs
src/render/: mod.rs  vertex.rs
src/systems/: camera.rs  chunk_loading.rs  light.rs  mod.rs
src/util/: consts.rs  events.rs  mod.rs  volume.rs
src/world/: chunk.rs  manager.rs  mod.rs  voxel.rs
